--- a/public_html/index.html
+++ b/public_html/index.html
@@ -164,11 +164,11 @@
   </nav>
 
   <!-- Keep this mobile menu block -->
-  <div x-show="menuOpen" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" class="glass px-6 py-5 space-y-4 md:hidden fixed top-0 left-0 w-full pt-20 mt-0 bg-gray-900">
-    <a href="#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Projects</a>
-    <a href="#community" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Community</a>
-    <a href="#present" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Present</a>
-    <a href="join.html" @click="menuOpen = false" class="pill-button block text-center px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
+  <div x-show="menuOpen" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" class="glass px-6 py-5 space-y-4 md:hidden fixed top-0 left-0 w-full pt-20 mt-0 bg-gray-900 z-40">
+    <a href="index.html#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Projects</a>
+    <a href="index.html#community" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Community</a>
+    <a href="index.html#present" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Present</a>
+    <a href="join.html" @click="menuOpen = false" class="pill-button block text-center text-sm px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
   </div>
 
   <!-- Hero Section with enhanced 3D particles -->
