--- a/public_html/index.html
+++ b/public_html/index.html
@@ -151,7 +151,7 @@
       <div class="hidden md:flex items-center space-x-8">
         <a href="#projects" class="text-sm font-medium hover:text-primary-400 transition">Projects</a>
         <a href="#community" class="text-sm font-medium hover:text-primary-400 transition">Community</a>
-        <a href="#present" class="text-sm font-medium hover:text-primary-400 transition">Present</a>
+        <a href="project-showcase.html" class="text-sm font-medium hover:text-primary-400 transition">Showcase</a>
         <a href="join.html" class="pill-button text-sm px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
       </div>
       <button @click="menuOpen = !menuOpen" class="md:hidden focus:outline-none">
@@ -165,9 +165,9 @@
 
   <!-- Keep this mobile menu block -->
   <div x-show="menuOpen" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" class="glass px-6 py-5 space-y-4 md:hidden fixed top-0 left-0 w-full pt-20 mt-0 bg-gray-900 z-40">
-    <a href="index.html#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Projects</a>
-    <a href="index.html#community" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Community</a>
-    <a href="index.html#present" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Present</a>
+    <a href="#projects" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Projects</a>
+    <a href="#community" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Community</a>
+    <a href="project-showcase.html" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Showcase</a>
     <a href="join.html" @click="menuOpen = false" class="pill-button block text-center text-sm px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
   </div>
 
