--- a/public_html/project-showcase.html
+++ b/public_html/project-showcase.html
@@ -22,7 +22,7 @@
               200: '#a7f3d0',
               300: '#6ee7b7',
               400: '#34d399',
-              500: '#10b981', // Main primary color
+              500: '#10b981',
               600: '#059669',
               700: '#047857',
               800: '#065f46',
@@ -34,7 +34,7 @@
               200: '#bfdbfe',
               300: '#93c5fd',
               400: '#60a5fa',
-              500: '#3b82f6', // Main secondary color
+              500: '#3b82f6',
               600: '#2563eb',
               700: '#1d4ed8',
               800: '#1e40af',
@@ -79,7 +79,7 @@
 </head>
 <body class="bg-gray-900 text-gray-100 font-sans">
 
-  <!-- Navigation Bar - Copied from index.html -->
+  <!-- Navigation Bar -->
  <nav class="fixed w-full top-0 z-50 transition-all duration-300" :class="{'glass shadow-lg': scrolled || menuOpen, 'bg-transparent': !scrolled && !menuOpen}">
     <div class="container mx-auto flex items-center justify-between px-6" :class="scrolled ? 'py-3' : 'py-5'">
       <a href="index.html#hero" class="relative z-10 text-xl sm:text-2xl font-semibold tracking-tight flex items-center">
@@ -102,12 +102,12 @@
     </div>
   </nav>
 
-  <!-- Mobile Menu - Copied from index.html -->
-  <div x-show="menuOpen" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" class="glass px-6 py-5 space-y-4 md:hidden fixed top-0 left-0 w-full pt-20 mt-0 bg-gray-900">
+  <!-- Mobile Menu -->
+  <div x-show="menuOpen" class="glass px-6 py-5 space-y-4 md:hidden fixed top-0 left-0 w-full pt-20 bg-gray-900">
     <a href="#code-challenges" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Challenges</a>
     <a href="#website-projects" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Websites</a>
     <a href="#library-explorations" @click="menuOpen = false" class="block font-medium hover:text-primary-400 transition">Libraries</a>
-    <a href="join.html" @click="menuOpen = false" class="pill-button block text-center px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
+    <a href="join.html" target="_blank" @click="menuOpen = false" class="pill-button block text-center px-6 py-2.5 bg-primary-500 hover:bg-primary-600 text-white rounded-full shadow-lg hover:shadow-xl transition">Join Now</a>
   </div>
 
   <!-- Page Header -->
@@ -125,24 +125,25 @@
         <span class="inline-block px-3 py-1 rounded-full bg-primary-900/30 text-primary-400 text-sm font-medium mb-4">Category</span>
         <h2 class="text-3xl md:text-4xl font-bold mb-4">Code Challenges</h2>
         <p class="text-lg text-gray-400 max-w-2xl mx-auto">
-          Algorithmic puzzles and problem-solving exercises from platforms like Codewars, LeetCode, and HackerRank.
+          Algorithmic puzzles and problem-solving exercises from platforms like Codewars.
         </p>
       </div>
-      <!-- Add challenge examples/grid here -->
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Example Card -->
         <div class="solid-card p-6 hover-lift">
-          <h3 class="text-xl font-semibold mb-2">Challenge Title 1</h3>
-          <p class="text-gray-400 mb-4">Brief description of the challenge and the platform.</p>
-          <a href="#" class="inline-flex items-center text-primary-400 font-medium">View Solution <span class="ml-1">&rarr;</span></a>
+          <h3 class="text-xl font-semibold mb-2">Sum of Two Smallest Numbers</h3>
+          <p class="text-gray-400 mb-4">A challenge on Codewars focusing on array manipulation.</p>
+          <a href="https://www.codewars.com/kata/558fc85d8fd1938afb000014" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View on Codewars <span class="ml-1">→</span></a>
         </div>
-         <!-- Example Card -->
         <div class="solid-card p-6 hover-lift">
-          <h3 class="text-xl font-semibold mb-2">Challenge Title 2</h3>
-          <p class="text-gray-400 mb-4">Brief description of the challenge and the platform.</p>
-          <a href="#" class="inline-flex items-center text-primary-400 font-medium">View Solution <span class="ml-1">&rarr;</span></a>
+          <h3 class="text-xl font-semibold mb-2">Valid Parentheses</h3>
+          <p class="text-gray-400 mb-4">Stack-based validation challenge from Codewars.</p>
+          <a href="https://www.codewars.com/kata/52774a314c2333f0a7000688" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View on Codewars <span class="ml-1">→</span></a>
         </div>
-         <!-- Add more cards as needed -->
+        <div class="solid-card p-6 hover-lift">
+          <h3 class="text-xl font-semibold mb-2">Persistent Bugger</h3>
+          <p class="text-gray-400 mb-4">A problem-solving exercise on Codewars involving number persistence.</p>
+          <a href="https://www.codewars.com/kata/55bf01e5a717a0d57e0000ec" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View on Codewars <span class="ml-1">→</span></a>
+        </div>
       </div>
     </div>
   </section>
@@ -150,32 +151,21 @@
   <!-- Website Projects Section -->
   <section id="website-projects" class="py-20 bg-gray-800">
     <div class="container mx-auto px-6">
-       <div class="text-center mb-12">
+      <div class="text-center mb-12">
         <span class="inline-block px-3 py-1 rounded-full bg-secondary-900/30 text-secondary-400 text-sm font-medium mb-4">Category</span>
         <h2 class="text-3xl md:text-4xl font-bold mb-4">Website Projects</h2>
         <p class="text-lg text-gray-400 max-w-2xl mx-auto">
           Full-stack applications, landing pages, and interactive web experiences built by our members.
         </p>
       </div>
-      <!-- Add website project examples/grid here -->
-       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Example Card -->
-        <div class="solid-card p-6 hover-lift">
-          <img src="images/placeholder.png" alt="Project Screenshot" class="rounded-md mb-4 aspect-video object-cover">
-          <h3 class="text-xl font-semibold mb-2">Website Project 1</h3>
-          <p class="text-gray-400 mb-4">Description of the website, technologies used.</p>
-          <a href="#" class="inline-flex items-center text-secondary-400 font-medium mr-4">Live Demo <span class="ml-1">&rarr;</span></a>
-          <a href="#" class="inline-flex items-center text-secondary-400 font-medium">View Code <span class="ml-1">&rarr;</span></a>
+      <div class="flex justify-center">
+        <div class="solid-card p-6 hover-lift lg:max-w-lg">
+          <img src="images/sustainableenergypic.png" alt="Sustainable Energy Modeling" class="rounded-md mb-4 aspect-video object-cover">
+          <h3 class="text-xl font-semibold mb-2">Sustainable Energy Modeling</h3>
+          <p class="text-gray-400 mb-4">Interactive website visualizing renewable energy data.</p>
+          <a href="https://sustainable-energy-model.onrender.com/" target="_blank" class="inline-flex items-center text-secondary-400 font-medium mr-4">Live Demo <span class="ml-1">→</span></a>
+          <a href ="https://github.com/chase-west/Sustainable-Energy-Model" target="_blank" class="inline-flex items-center text-secondary-400 font-medium">View Code <span class="ml-1">→</span></a>
         </div>
-         <!-- Example Card -->
-        <div class="solid-card p-6 hover-lift">
-           <img src="images/placeholder.png" alt="Project Screenshot" class="rounded-md mb-4 aspect-video object-cover">
-          <h3 class="text-xl font-semibold mb-2">Website Project 2</h3>
-          <p class="text-gray-400 mb-4">Description of the website, technologies used.</p>
-          <a href="#" class="inline-flex items-center text-secondary-400 font-medium mr-4">Live Demo <span class="ml-1">&rarr;</span></a>
-          <a href="#" class="inline-flex items-center text-secondary-400 font-medium">View Code <span class="ml-1">&rarr;</span></a>
-        </div>
-         <!-- Add more cards as needed -->
       </div>
     </div>
   </section>
@@ -183,35 +173,41 @@
   <!-- Library Explorations Section -->
   <section id="library-explorations" class="py-20 bg-gray-900">
     <div class="container mx-auto px-6">
-       <div class="text-center mb-12">
+      <div class="text-center mb-12">
         <span class="inline-block px-3 py-1 rounded-full bg-primary-900/30 text-primary-400 text-sm font-medium mb-4">Category</span>
         <h2 class="text-3xl md:text-4xl font-bold mb-4">Library Explorations</h2>
         <p class="text-lg text-gray-400 max-w-2xl mx-auto">
-          Experiments and deep dives into specific libraries and frameworks like D3.js, Three.js, Tailwind CSS, etc.
+          Experiments and deep dives into specific libraries and frameworks like Three.js, D3.js, and more.
         </p>
       </div>
-      <!-- Add library exploration examples/grid here -->
-       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- Example Card -->
+      <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="solid-card p-6 hover-lift">
           <h3 class="text-xl font-semibold mb-2">Three.js Particle System</h3>
           <p class="text-gray-400 mb-4">Exploring particle effects and interactions using Three.js.</p>
-          <a href="#" class="inline-flex items-center text-primary-400 font-medium mr-4">Live Demo <span class="ml-1">&rarr;</span></a>
-          <a href="#" class="inline-flex items-center text-primary-400 font-medium">View Code <span class="ml-1">&rarr;</span></a>
+          <a href="#" target="_blank" class="inline-flex items-center text-primary-400 font-medium mr-4">Live Demo <span class="ml-1">→</span></a>
+          <a href="#" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Code <span class="ml-1">→</span></a>
         </div>
-         <!-- Example Card -->
         <div class="solid-card p-6 hover-lift">
           <h3 class="text-xl font-semibold mb-2">D3.js Data Visualization</h3>
           <p class="text-gray-400 mb-4">Creating interactive charts and graphs with D3.js.</p>
-           <a href="#" class="inline-flex items-center text-primary-400 font-medium mr-4">Live Demo <span class="ml-1">&rarr;</span></a>
-          <a href="#" class="inline-flex items-center text-primary-400 font-medium">View Code <span class="ml-1">&rarr;</span></a>
+          <a href="#" target="_blank" class="inline-flex items-center text-primary-400 font-medium mr-4">Live Demo <span class="ml-1">→</span></a>
+          <a href="#" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Code <span class="ml-1">→</span></a>
         </div>
-         <!-- Add more cards as needed -->
+        <div class="solid-card p-6 hover-lift">
+          <h3 class="text-xl font-semibold mb-2">Wordle Reinforcement Learning</h3>
+          <p class="text-gray-400 mb-4">Implementing RL to solve Wordle in Python.</p>
+          <a href="https://github.com/chase-west/Wordle-Reinforcement-Learning" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Repo <span class="ml-1">→</span></a>
+        </div>
+        <div class="solid-card p-6 hover-lift">
+          <h3 class="text-xl font-semibold mb-2">Hand Tracking Operations</h3>
+          <p class="text-gray-400 mb-4">Exploring hand tracking and gesture recognition techniques.</p>
+          <a href="https://github.com/chase-west/HandTrackingOperations" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Repo <span class="ml-1">→</span></a>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Footer - Copied from index.html -->
+  <!-- Footer -->
   <footer class="py-12 text-center text-gray-400 text-sm">
     <p>© <span x-text="new Date().getFullYear()"></span> Coding Reno. All rights reserved.</p>
   </footer>
@@ -227,8 +223,6 @@
         scrollTrigger: { trigger: section, start: 'top 80%', once: true }
       });
     });
-
-    // You can add specific animations for this page here if needed
   </script>
 </body>
-</html> 
+</html>
